class AppStrings {
  const AppStrings._();

  static const String loginAndRegister = 'Login and Register UI';
  static const String uhOhPageNotFound = 'uh-oh!\nPage not found';
  static const String register1 = 'REGISTER';
  static const String register2 = 'Register';
  static const String login = 'Login';
  static const String createYourAccount = 'Create your account';
  static const String doNotHaveAnAccount = "Don't have an account?";
  static const String facebook = 'Facebook';
  static const String google = 'Google';
  static const String signInToYourNAccount = 'Sign in to your\nAccount';
  static const String signInToYourAccount = 'Sign in to your Account';
  static const String iHaveAnAccount = 'I have an account?';
  static const String forgotPassword = 'Forgot Password?';
  static const String orLoginWith = 'or Login with';

  static const String loggedIn = 'Logged In!';
  static const String registrationComplete = 'Registration Complete!';

  static const String name = 'Name';
  static const String pleaseEnterName = 'Please, Enter Name';
  static const String invalidName = 'Invalid Name';

  static const String email = 'Email';
  static const String pleaseEnterEmailAddress = 'Please, Enter Email Address';
  static const String invalidEmailAddress = 'Invalid Email Address';

  static const String password = 'Password';
  static const String pleaseEnterPassword = 'Please, Enter Password';
  static const String invalidPassword = 'Invalid Password';

  static const String confirmPassword = 'Confirm Password';
  static const String pleaseReEnterPassword = 'Please, Re-Enter Password';
  static const String passwordNotMatched = 'Password not matched!';

  static const String notExisting = 'User does not exist!';
  static const String userExist = 'User aldready exist!';
}
